tests/ast-grep/pass/src/domain/annotations_api.py
import annotationlib


def read_annotations(obj: object) -> dict[str, object]:
    return annotationlib.get_annotations(obj)
