tests/ast-grep/fail/src/domain/helper_import.py
from utils import normalize


def project(value: str) -> str:
    return normalize(value)
